--- a/X86.MD
+++ b/X86.MD
@@ -9,3 +9,11 @@ https://www.agner.org/optimize/instruction_tables.pdf
 LATENCY, THROUGHPUT, AND PORT USAGE INFORMATION of X86: 
 
 https://uops.info/
+
+Performance speed limits：
+
+https://travisdowns.github.io/blog/2019/06/11/speed-limits.html
+
+How are x86 uops scheduled, exactly?：
+
+https://stackoverflow.com/questions/40681331/how-are-x86-uops-scheduled-exactly
