--- a/X86.MD
+++ b/X86.MD
@@ -17,3 +17,7 @@ https://travisdowns.github.io/blog/2019/06/11/speed-limits.html
 How are x86 uops scheduled, exactly?：
 
 https://stackoverflow.com/questions/40681331/how-are-x86-uops-scheduled-exactly
+
+Measuring Reorder Buffer Capacity:
+
+http://blog.stuffedcow.net/2013/05/measuring-rob-capacity/
