--- a/X86.MD
+++ b/X86.MD
@@ -24,3 +24,7 @@ http://blog.stuffedcow.net/2013/05/measuring-rob-capacity/
 
 
 https://stackoverflow.com/questions/50984007/what-exactly-happens-when-a-skylake-cpu-mispredicts-a-branch
+
+Intel Ivy Bridge Cache Replacement Policy:
+
+http://blog.stuffedcow.net/2013/01/ivb-cache-replacement/
