--- a/X86.MD
+++ b/X86.MD
@@ -28,3 +28,8 @@ https://stackoverflow.com/questions/50984007/what-exactly-happens-when-a-skylake
 Intel Ivy Bridge Cache Replacement Policy:
 
 http://blog.stuffedcow.net/2013/01/ivb-cache-replacement/
+
+
+The cost of conditional moves and branches:
+
+https://kristerw.blogspot.com/2017/03/the-cost-of-conditional-moves-and.html
