--- a/X86.MD
+++ b/X86.MD
@@ -29,7 +29,17 @@ Intel Ivy Bridge Cache Replacement Policy:
 
 http://blog.stuffedcow.net/2013/01/ivb-cache-replacement/
 
+-----------------------------------------------------------------------------
+
+When does Conditional Execution/Move/Selection sucks?
 
 The cost of conditional moves and branches:
 
 https://kristerw.blogspot.com/2017/03/the-cost-of-conditional-moves-and.html
+
+gcc optimization flag -O3 makes code slower than -O2:
+
+https://stackoverflow.com/questions/28875325/gcc-optimization-flag-o3-makes-code-slower-than-o2
+
+Comments From Linus Torvalds
+https://yarchive.net/comp/linux/cmov.html
